# libz-sys

./: .gitmodules  .travis.yml  Cargo-zng.toml  Cargo.toml  MAINTENANCE.md  README-zng.md  README.md  appveyor.yml  build.rs  build_zng.rs  cargo-zng
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: Dockerfile  build.bash  set_rust_version.bash  test.bash
maint/: Cargo.toml
maint/src/: main.rs
src/: build.rs  lib.rs
src/compile_check/arm/: aarch64_caps.c  arm_caps.c  arm_hwcaps.c  arm_hwneon.c  arm_neon.c  ld4.c
src/compile_check/avx512/: basic.c  mask.c  vnni.c  vpclmulqdq.c
systest/: Cargo-zng.toml  Cargo.toml  build.rs
systest/src/: main.rs
zng/: cc.rs  cmake.rs
