[package]

name = "libz-sys"
version = "1.0.25"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "z"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/libz-sys"
documentation = "https://docs.rs/libz-sys"
description = """
Bindings to the system libz library (also known as zlib).
"""
categories = ["external-ffi-bindings"]

[workspace]
members = ["systest"]

[dependencies]
# When this feature is disabled, zlib will be built in Z_SOLO mode which
# removes dependency on any external libraries like libc at the cost of
# eliminating some high-level functions like gz*, compress* and
# uncompress, and requiring embedder to provide memory allocation
# routines to deflate and inflate.
libc = { version = "0.2.43", optional = true }

[build-dependencies]
pkg-config = "0.3.9"
cc = "1.0.18"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
default = ["libc"]
# When building from source, enable building optimized assembly routines. As
# noted in `contrib/README.contrib`, these routines are experimental and not
# vetted, use at your own risk!
asm = []
# Enable this feature if you want to have a staticly linked libz
static = []
