[package]
name = "libz-sys"
version = "1.1.16"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Josh Triplett <josh@joshtriplett.org>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
links = "z"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/libz-sys"
description = "Low-level bindings to the system libz library (also known as zlib)."
categories = ["compression", "external-ffi-bindings"]
keywords = ["zlib", "zlib-ng"]
edition = "2018"

include = [
    "LICENSE*",
    "/README.md",
    "build.rs",
    "src/*.rs",
    "src/*.c",
    "src/zlib/*.[ch]",
    "src/zlib/*.pc.in",
]

[workspace]
members = ["systest"]

[dependencies]
# When this feature is disabled, zlib will be built in Z_SOLO mode which
# removes dependency on any external libraries like libc at the cost of
# eliminating some high-level functions like gz*, compress* and
# uncompress, and requiring embedder to provide memory allocation
# routines to deflate and inflate.
libc = { version = "0.2.43", optional = true }

[build-dependencies]
pkg-config = "0.3.9"
cc = "1.0.18"
vcpkg = "0.2"

[features]
default = ["libc", "stock-zlib"]
# By default, libz-sys uses stock zlib. If you set default-features=false,
# enable the zlib-ng feature, and don't enable the stock-zlib feature, libz-sys
# will instead supply the high-performance zlib-ng, in zlib-compat mode. Any
# application or library designed for zlib should work with zlib-ng in
# zlib-compat mode, as long as it doesn't make assumptions about the exact size
# or output of the deflated data (e.g. "compressing this data produces exactly
# this many bytes"), and as long as you don't also dynamically pull in a copy
# of stock zlib (which will produce conflicting symbols). If a single crate in
# the dependency graph requests stock-zlib (or doesn't disable default
# features), you'll get stock zlib.
#
# Library crates should use:
# libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
# (Omit the libc feature if you don't require the corresponding functions.)
#
# This allows higher-level crates depending on your library to opt into zlib-ng
# if desired.
zlib-ng = ["libc"]
# AVX-512 is nightly-only currently <https://github.com/rust-lang/rust/issues/44839>,
# enabling this feature means that AVX-512 support is probed for in the C compiler.
#
# No effect on non-x86 arches
zlib-ng-avx512 = ["zlib-ng"]
stock-zlib = []
# Deprecated: the assembly routines are outdated, and either reduce performance
# or cause segfaults.
asm = []
# Enable this feature if you want to have a statically linked libz
static = []
