[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"

[dependencies]
libz-sys = { path = "..", default-features = false, features = ["libc"] }
libc = "0.2"

[build-dependencies]
ctest2 = "0.3"

[features]
libz-static = ["libz-sys/static"]
zlib-ng = ["libz-sys/zlib-ng"]
